Fix slightly off-center row toggle on largest breakpoint
Fixes #40

--- a/wp-content/themes/mediaplus-2017/assets/css/pages/clients.scss
+++ b/wp-content/themes/mediaplus-2017/assets/css/pages/clients.scss
@@ -183,6 +183,14 @@
   }
 }
 
+@media (min-width: $bp-xxl) {
+
+  /* Adjust for font size change */
+  .row-toggle {
+    top: .425em;
+  }
+}
+
 /*
  *	ACTIVE STATE
  *	---------------------------------------------
